welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: '=' expected but ';' found.
  var position=-1;
                 ^indexOfValue:4: error: illegal start of simple expression
  for (i<-1 to nums.length) ;
                            ^